* Fixed: An issue with processing MainWP cron events * Fixed: An issue with reconnecting disconnected sites * Fixed: Typo in the Client info widget * Fixed: Layout issue where the side content element drops down on specific zoom levels * Fixed: Missing plugin wp.org link in plugin info modal * Added: `mainwp-update-all-button` CSS class to all "Update All" buttons * Added: System check to detect if the `tmpfile()` PHP function is disabled * Updated: Default page length in the Non-MainWP Changes widget * Updated: Tag options fields sanitation * Tweaked: Basic button border replaced with inset shadow in the dark theme

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -15,7 +15,7 @@
 
 .mainwp-side-content {
     height: 100%;
-    width: 300px;
+    width: 299.5px;
     float: right;
     border-left: 1px solid #dadada;
     border-bottom: 1px solid #dadada;
@@ -567,6 +567,14 @@ table#mainwp-manage-sites-table .error a {
 
 
 /* Manage Extensions */
+
+#mainwp-manage-extensions.ui.segment {
+    padding: 0px;
+}
+
+#mainwp-manage-extensions .mainwp-main-content {
+    padding: 1em;
+}
 
 .mainwp-disabled-extension .header,
 .mainwp-disabled-extension .content:not(.extra) {
