* Refactored: Updated and optimized the plugin codebase to align with the latest WordPress coding standards, ensuring improved compatibility and performance. * Fixed: An issue with the status icon not displaying correctly during the Re-establish Connection process, enhancing the user's ability to monitor connection status effectively. * Fixed: The absence of "Next Run" information in the Cron Schedules table, ensuring complete and accurate scheduling data is visible. * Fixed: The display and functionality of the Clients table length menu, ensuring a smoother user interaction when adjusting table views. * Fixed: Issues with overlapping tooltip elements in the "Add New" dropdown menu items, improving clarity and usability of the navigation interface.

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -160,6 +160,11 @@
     border-bottom-width: 2px !important;
 }
 
+.ui.labeled.icon.menu.mainwp-sub-submenu {
+    margin:0;
+    border-radius:0;
+}
+
 /* Menu */
 
 #mainwp-main-navigation-container {
