* Fixed: Display of incorrect currency symbols in the add and edit cost forms. * Fixed: Incorrect link for the WooCommerce Status extension in the menu. * Fixed: "Invalid request" error during post and page publication. * Fixed: Inaccurate background color in the API Backups action bar. * Fixed: Displaying unformatted dates in the Client Info widget. * Fixed: Misalignment of icon button menus in the Recent Posts and Recent Pages widgets. * Fixed: Issue with the Solid Security menu item. * Fixed: Problems loading widget placeholder images. * Fixed: Purchase Date field on the New/Edit Cost page saving incorrect dates with some WordPress languages. * Fixed: Display of lifetime purchases as a weekly cost in Site and Client widgets and the Manage Sites table. * Fixed: Costs assigned to a Tag being incorrectly shown for sites not in that Tag. * Fixed: "Renews at" date appearing one day early. * Fixed: Editing and saving entries with a defined Slug, including a duplication check. * Fixed: Cost price field tooltip for clearer instructions. * Added: A page reload method after deleting Plesk backups to ensure the UI is immediately updated. * Updated: Changed the cost status label from "Activate" to "Active" for clarity. * Updated: Close icon in modals for dark theme for better visibility. * Updated: Z-index value of modal dimmers to ensure proper layering. * Updated: Notice style for the API Backups feature for enhanced readability. * Updated: Style of icon buttons for Plesk backup actions for consistency. * Updated: Prevention of auto-filling in the MainWP Main API Key field for usability.

--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -167,3 +167,8 @@
 .mainwp-ui i.plug.circular.icon {
   height: auto !important;
 }
+
+
+.mainwp-ui .ui.dimmer.modals.active {
+  z-index: 99999;
+}
