--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -118,7 +118,7 @@
 .mainwp-ui .ui.message a:not(.button) { color: rgba(0,0,0,.87); font-weight: bolder; text-decoration: underline !important;}
 
 .mainwp-ui [data-tooltip][data-inverted]:before,
-.mainwp-ui [data-tooltip][data-inverted]:after { z-index: 15 !important; }
+.mainwp-ui [data-tooltip][data-inverted]:after { z-index: 99 !important; }
 
 .mainwp-ui .progress .bar {
   border-radius: 0;
@@ -168,7 +168,7 @@
   height: auto !important;
 }
 
-
+.mainwp-ui .ui.dimmer.active,
 .mainwp-ui .ui.dimmer.modals.active {
   z-index: 99999;
 }
