--- a/assets/css/themes/mainwp-dark-theme.css
+++ b/assets/css/themes/mainwp-dark-theme.css
@@ -706,6 +706,7 @@ body.mainwp-ui.mainwp-custom-theme,
 
 .mainwp-ui.mainwp-custom-theme .ui.inverted.dimmer {
   background: var(--background-color-2);
+  opacity: .9;
 }
 .mainwp-ui.mainwp-custom-theme .ui.inverted.dimmer .text {
   color: var(--font-light-color);
