Update for 5.0.3 version

--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -186,5 +186,6 @@
   min-height: 2.71428571em;
   padding: 5px !important;
   border-radius: 0 10px 10px 0 !important;
-  -webkit-border-radius: 0 10px 10px 0 !important;
+  -webkit-border-radius: 0 10px 10px 0 !important;,
+  max-width: 65px !important;
 }
