--- a/assets/css/themes/mainwp-dark-theme.css
+++ b/assets/css/themes/mainwp-dark-theme.css
@@ -519,6 +519,10 @@ body.mainwp-ui.mainwp-custom-theme,
 
 /* Invert Messages */
 
+.mainwp-ui.mainwp-custom-theme .ui.message .header {
+  color: var( --font-color );
+}
+
 .mainwp-ui.mainwp-custom-theme .ui.message {
   color: var(--font-color);
   background-color: var(--background-color-4);
