--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -1539,10 +1539,13 @@ th .down.icon {
 .mainwp-ui .qq-upload-drop-area {
     min-width: 100%;
     padding: 50px;
-    border: 5px dashed #999999;
     margin-top: 20px;
+    border: 5px dashed #999999 !important;
+    display: none;
 }
-
+.mainwp-ui .qq-upload-drop-area.active-area {
+    display: inline-block !important;
+}
 .mainwp-get-started-widget-check-lists .item .content {
     width: auto !important;
 }
@@ -1551,4 +1554,14 @@ th .down.icon {
 #mainwp_add_edit_client_upload_custom_icon,
 .mainwp_add_edit_contact_upload_custom_icon{
     margin-left: 30px !important;
+}
+
+.qq-upload-completed .qq-upload-cancel,
+.qq-upload-completed .qq-upload-percent{
+    display: none !important;
+}
+
+#mainwp-install-themes .qq-upload-success .qq-upload-add-to-favorites,
+#mainwp-install-plugins .qq-upload-success .qq-upload-add-to-favorites{
+    display: inline-block !important; /* display on those pages, hide on other extension pages. */
 }
